@@ -2,21 +2,28 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.domain.Channel;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.context.annotation.Primary;
+import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.sprint.mission.discodeit.util.FileIOUtil.loadFromFile;
 import static com.sprint.mission.discodeit.util.FileIOUtil.saveToFile;
 
+@Profile("file")
+@Repository
 public class FileChannelRepository implements ChannelRepository {
-    private final Path filePath = Path.of("./result/channels.ser");
+    private final Path filePath;
     private final Map<UUID, Channel> channelMap;
 
-    public FileChannelRepository() {
+    public FileChannelRepository(@Value("${discodeit.repository.channel-file-path}") Path filePath) {
+        this.filePath = filePath;
         if (!Files.exists(this.filePath)) {
             try {
                 Files.createFile(this.filePath);
@@ -36,16 +43,20 @@ public class FileChannelRepository implements ChannelRepository {
     }
 
     @Override
-    public Optional<Channel> findByName(String channelName) {
+    public boolean channelExistById(UUID channelID) {
+        return channelMap.containsKey(channelID);
+    }
+
+    @Override
+    public Optional<Channel> findById(UUID channelId) {
         return channelMap.values().stream()
-                .filter(channel -> channel.getName().equals(channelName))
+                .filter(channel -> channel.getId().equals(channelId))
                 .findFirst();
     }
 
     @Override
     public List<Channel> findAll() {
-        return channelMap.values().stream()
-                .collect(Collectors.toList());
+        return channelMap.values().stream().toList();
     }
 
     @Override
