@@ -2,10 +2,13 @@ package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.domain.Channel;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+@Profile("jcf")
+@Repository
 public class JCFChannelRepository implements ChannelRepository {
     private final Map<UUID, Channel> channelMap;
 
@@ -20,16 +23,20 @@ public class JCFChannelRepository implements ChannelRepository {
     }
 
     @Override
-    public Optional<Channel> findByName(String channelName) {
+    public boolean channelExistById(UUID channelID) {
+        return channelMap.containsKey(channelID);
+    }
+
+    @Override
+    public Optional<Channel> findById(UUID channelId) {
         return channelMap.values().stream()
-                .filter(channel -> channel.getName().equals(channelName))
+                .filter(channel -> channel.getId().equals(channelId))
                 .findFirst();
     }
 
     @Override
     public List<Channel> findAll() {
-        return channelMap.values().stream()
-                .collect(Collectors.toList());
+        return channelMap.values().stream().toList();
     }
 
     @Override
